updated user_service....
